sources/kube-prometheus/overlay/resource-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # certmanager.k8s.io/cluster-issuer: letsencrypt
    # kubernetes.io/tls-acme: "true"
    # FIXME add something for cookie size, keycloak..
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
  tls:
  - hosts:
    - grafana.codeformuenster.org
    secretName: grafana-tls
